(fix) some word wrapping issues

--- a/src/assets/scss/components/_TransactionsList.scss
+++ b/src/assets/scss/components/_TransactionsList.scss
@@ -29,6 +29,7 @@ $avatar-dimensions: 30px;
   font-weight: normal;
   line-height: 1.29;
   text-align: left;
+  word-break: break-all;
 }
 
 .sw-TransactionsList-ItemAvatar {
